# glfdc

./: base26.cc  base26.hh  cfold.hh  eval.cc  eval.hh  expr.hh  expr_builder.cc  expr_builder.hh  glfdc.cc  meson.build  sexpr.hh  sexpr_cmp.hh  sparse_map.hh  stack.hh
tests/: meson.build  test_build.cc  test_eval.cc  test_stack.cc  unknowns.hh
